# ai-editorial-digest-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  roadmap.md
examples/: quickstart.py  sample_manifest.json  sample_output.json
fixtures/: sample_dois.json
src/ai_editorial_digest/: enricher.py  fetcher.py  manifest.py  models.py  pipeline.py  validator.py
tests/: test_enricher.py  test_fetcher.py  test_manifest.py  test_models.py  test_pipeline.py  test_validator.py
tools/: generate_sample.py
